deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOYMENT_NAME}
  namespace: faucet
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ${DEPLOYMENT_NAME}
  template:
    metadata:
      labels:
        app: ${DEPLOYMENT_NAME}
    spec:
      containers:
        - name: faucet
          image: matterlabs/faucet
          imagePullPolicy: Always
          ports:
            - containerPort: 2880
---
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT_NAME}
  namespace: faucet
  labels:
    app: ${DEPLOYMENT_NAME}
spec:
  type: ClusterIP
  ports:
  - port: 2880
    targetPort: 2880
    protocol: TCP
    name: ${DEPLOYMENT_NAME}-port
  selector:
    app: ${DEPLOYMENT_NAME}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${DEPLOYMENT_NAME}-ingress
  namespace: faucet
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
      - ${DEPLOYMENT_NAME}.zksync.dev
      secretName: zksync-dev
  rules:
  - host: ${DEPLOYMENT_NAME}.zksync.dev
    http:
      paths:
        - path: /
          backend:
            serviceName: ${DEPLOYMENT_NAME}
            servicePort: 2880
